--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,22 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  // memberikan event listener pada halaman utama windows
+  window.addEventListener('keydown', function(e){
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+    if(!audio) return // stop function
+    audio.currentTime = 0 // rewind to start
+    audio.play()
+    key.classList.add('playing')
+  })
+
+  // memberikan event listener kepada class .key
+  const keys = document.querySelectorAll(".key")
+  keys.forEach(key => key.addEventListener('transitionend', (e) => {
+    if(e.propertyName !== "transform") return
+    e.target.classList.remove('playing')
+  }))
 
 </script>
 
